.hidden/dev_ws/log/build_2022-04-14_01-48-43/fan_pcb/stderr.log
  File "/home/ubuntu/dev_ws/install/fan_pcb/lib/python3.8/site-packages/fan_pcb/fan_controller.py", line 16
    fcontroller = FanController(1https://github.com/NuggySupreme/IndoorQuadcopterTestbedCode)
                                 ^
SyntaxError: invalid syntax

